--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"start": "cross-env NODE_ENV=production node dist/index.js"
 	},
 	"dependencies": {
+		"@types/mathjs": "^9.4.2",
 		"@types/node": "^16.11.11",
+		"cross-env": "^7.0.3",
+		"mathjs": "^10.4.2",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.5.2",
-		"cross-env": "^7.0.3"
+		"typescript": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.12",
